tests/baselines/reference/unicodeIdentifierName2.errors.txt
tests/cases/compiler/unicodeIdentifierName2.ts(1,6): error TS1127: Invalid character.
tests/cases/compiler/unicodeIdentifierName2.ts(1,8): error TS1134: Variable declaration expected.
tests/cases/compiler/unicodeIdentifierName2.ts(1,10): error TS1134: Variable declaration expected.
tests/cases/compiler/unicodeIdentifierName2.ts(1,19): error TS2304: Cannot find name 'alert'.
tests/cases/compiler/unicodeIdentifierName2.ts(1,26): error TS1127: Invalid character.


==== tests/cases/compiler/unicodeIdentifierName2.ts (5 errors) ====
    var a₁ = "hello"; alert(a₁)
         
!!! error TS1127: Invalid character.
           ~
!!! error TS1134: Variable declaration expected.
             ~~~~~~~
!!! error TS1134: Variable declaration expected.
                      ~~~~~
!!! error TS2304: Cannot find name 'alert'.
                             
!!! error TS1127: Invalid character.